@@ -1,5 +1,14 @@
 2007-10-14  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/wireless-security.h
+	  src/wireless-security/Makefile.am
+	  src/wireless-security/ws-leap.c
+	  src/wireless-security/ws-leap.h
+	  src/wireless-dialog.c
+		- Add LEAP support
+
+2007-10-14  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.glade
 		- Fix up LEAP widget
 		- Add max length constraints on some security widgets
